[gd_scene load_steps=37 format=2]

[ext_resource path="res://sprites/screens/player_computer/SpaceBackground.png" type="Texture" id=1]
[ext_resource path="res://sprites/screens/player_computer/TimeTexture.png" type="Texture" id=2]
[ext_resource path="res://sprites/screens/player_computer/start_button/StartNormal.png" type="Texture" id=3]
[ext_resource path="res://src/screens/player_computer/PlayerComputer.gd" type="Script" id=4]
[ext_resource path="res://src/characters/glasses_mouse/GlassesMouse.tscn" type="PackedScene" id=5]
[ext_resource path="res://sprites/screens/player_computer/EggSlices.png" type="Texture" id=6]
[ext_resource path="res://sprites/screens/player_computer/BorderTile.png" type="Texture" id=7]
[ext_resource path="res://sprites/screens/player_computer/StartFlag.png" type="Texture" id=8]
[ext_resource path="res://src/screens/player_computer/TrashIcon.tscn" type="PackedScene" id=9]
[ext_resource path="res://sprites/screens/player_computer/start_button/StartHover.png" type="Texture" id=10]
[ext_resource path="res://sprites/screens/player_computer/Windows9Patch.png" type="Texture" id=11]
[ext_resource path="res://sprites/screens/player_computer/start_button/StartPressed.png" type="Texture" id=12]
[ext_resource path="res://fonts/HelvetiPixel.tres" type="DynamicFont" id=13]
[ext_resource path="res://sprites/screens/player_computer/SimplePattern.png" type="Texture" id=14]
[ext_resource path="res://src/screens/player_computer/StartMenuOption.tscn" type="PackedScene" id=15]
[ext_resource path="res://sprites/screens/player_computer/ComputerIcon.png" type="Texture" id=16]
[ext_resource path="res://sprites/screens/player_computer/NotesIcon.png" type="Texture" id=17]
[ext_resource path="res://sprites/screens/player_computer/SmallerDither.png" type="Texture" id=18]
[ext_resource path="res://sprites/screens/player_computer/TrashStartIcon.png" type="Texture" id=19]
[ext_resource path="res://src/screens/player_computer/NotesIcon.tscn" type="PackedScene" id=20]
[ext_resource path="res://src/3d/StackedSprite.tscn" type="PackedScene" id=21]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 14, 0, 14, 14, 0, 14 )

[sub_resource type="TileSet" id=2]
0/name = "BorderTile.png 0"
0/texture = ExtResource( 7 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 14, 14 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 140, 47 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 97, 47 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0.501961, 0.501961, 1 )
border_width_top = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 25, 8 )

[sub_resource type="DynamicFontData" id=7]
antialiased = false
font_path = "res://fonts/TinyUnicode.ttf"

[sub_resource type="DynamicFont" id=8]
font_data = SubResource( 7 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 13, 17 )

[sub_resource type="StyleBoxFlat" id=10]
content_margin_left = 2.0
content_margin_right = 2.0
bg_color = Color( 0, 0, 0, 1 )
border_color = Color( 0, 0, 0, 1 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=11]
content_margin_left = 2.0
content_margin_right = 2.0
bg_color = Color( 0, 0.501961, 0.501961, 1 )
border_color = Color( 0, 0, 0, 1 )
anti_aliasing = false

[sub_resource type="DynamicFontData" id=12]
antialiased = false
font_path = "res://fonts/TinyUnicode.ttf"

[sub_resource type="DynamicFont" id=13]
extra_spacing_top = -4
font_data = SubResource( 12 )

[sub_resource type="Shader" id=14]
code = "shader_type canvas_item;

void fragment() {
	float diff_y = 0.075 * sin((8.0 * UV.x) + (TIME * 4.0));
	COLOR = texture(TEXTURE, vec2(UV.x, UV.y + diff_y));
}"

[sub_resource type="ShaderMaterial" id=15]
shader = SubResource( 14 )

[node name="PlayerComputer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BorderTileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 14, 14 )
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, 65535, 0, 0, 20, 0, 0, 131071, 0, 0, 65556, 0, 0, 196607, 0, 0, 131092, 0, 0, 262143, 0, 0, 196628, 0, 0, 327679, 0, 0, 262164, 0, 0, 393215, 0, 0, 327700, 0, 0, 458751, 0, 0, 393236, 0, 0, 524287, 0, 0, 458772, 0, 0, 589823, 0, 0, 524308, 0, 0, 655359, 0, 0, 589844, 0, 0, 720895, 0, 0, 655380, 0, 0, 786431, 0, 0, 720916, 0, 0, 851967, 0, 0, 786452, 0, 0, 917503, 0, 0, 851988, 0, 0, 983039, 0, 0, 917524, 0, 0, 1048575, 0, 0, 983040, 0, 0, 983041, 0, 0, 983042, 0, 0, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0, 983058, 0, 0, 983059, 0, 0, 983060, 0, 0 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.501961, 0.501961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Space" type="TextureRect" parent="Background"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DesktopArea" type="Area2D" parent="."]

[node name="CollisionShapeTop" type="CollisionShape2D" parent="DesktopArea"]
position = Vector2( 140, 47 )
shape = SubResource( 3 )

[node name="CollisionShapeRight" type="CollisionShape2D" parent="DesktopArea"]
position = Vector2( 183, 141 )
shape = SubResource( 4 )

[node name="Taskbar" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -22.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="TextureButton" parent="Taskbar"]
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 3.0
margin_right = 53.0
margin_bottom = -2.0
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButtonArea" type="Area2D" parent="Taskbar/StartButton"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Taskbar/StartButton/StartButtonArea"]
position = Vector2( 26, 9 )
shape = SubResource( 6 )

[node name="Time" type="TextureRect" parent="Taskbar"]
margin_left = 228.0
margin_top = 3.0
margin_right = 279.0
margin_bottom = 20.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Center" type="CenterContainer" parent="Taskbar/Time"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = -2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="Taskbar/Time/Center"]
margin_left = 4.0
margin_top = 1.0
margin_right = 44.0
margin_bottom = 15.0
custom_constants/separation = 2

[node name="Time" type="Label" parent="Taskbar/Time/Center/HBox"]
margin_right = 27.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 13 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "00:00"
align = 1
valign = 1

[node name="AmPm" type="Label" parent="Taskbar/Time/Center/HBox"]
margin_left = 29.0
margin_right = 40.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "AM"
align = 1
valign = 1

[node name="TrashIcon" parent="." instance=ExtResource( 9 )]
position = Vector2( 250, 35 )

[node name="Shadow" type="Node2D" parent="TrashIcon"]
visible = false
show_behind_parent = true

[node name="TrashTopLeftShadow" parent="TrashIcon/Shadow" instance=ExtResource( 9 )]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -1, -1 )

[node name="TrashBottomRightShadow" parent="TrashIcon/Shadow" instance=ExtResource( 9 )]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 1, 1 )

[node name="TrashTopRightShadow" parent="TrashIcon/Shadow" instance=ExtResource( 9 )]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 1, -1 )

[node name="TrashBottomLeftShadow" parent="TrashIcon/Shadow" instance=ExtResource( 9 )]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -1, 1 )

[node name="TrashIconArea" type="Area2D" parent="TrashIcon"]
position = Vector2( -1, -1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="TrashIcon/TrashIconArea"]
shape = SubResource( 9 )

[node name="TrashButton" type="Button" parent="TrashIcon"]
margin_left = -14.0
margin_top = 10.0
margin_right = 13.0
margin_bottom = 19.0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
toggle_mode = true
text = "Trash"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NotesIcon" parent="." instance=ExtResource( 20 )]
position = Vector2( 249, 92 )

[node name="Shadow" type="Node2D" parent="NotesIcon"]
visible = false
show_behind_parent = true

[node name="ShadowTopLeft" parent="NotesIcon/Shadow" instance=ExtResource( 20 )]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -1, -1 )

[node name="ShadowBottomLeft" parent="NotesIcon/Shadow" instance=ExtResource( 20 )]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -1, 1 )

[node name="ShadowBottomRight" parent="NotesIcon/Shadow" instance=ExtResource( 20 )]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 1, 1 )

[node name="ShadowTopRight" parent="NotesIcon/Shadow" instance=ExtResource( 20 )]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 1, -1 )

[node name="NotesIconArea" type="Area2D" parent="NotesIcon"]
position = Vector2( 0, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="NotesIcon/NotesIconArea"]
position = Vector2( 0, -4 )
shape = SubResource( 9 )

[node name="NotesButton" type="Button" parent="NotesIcon"]
margin_left = -14.0
margin_top = 10.0
margin_right = 14.0
margin_bottom = 19.0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
toggle_mode = true
text = "Notes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameIcon" parent="." instance=ExtResource( 21 )]
position = Vector2( 249, 145 )
sprite_sheet = ExtResource( 6 )
frames = 12

[node name="Shadow" type="Node2D" parent="GameIcon"]
visible = false
show_behind_parent = true

[node name="EggShadowTopLeft" parent="GameIcon/Shadow" instance=ExtResource( 21 )]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -1, -1 )
sprite_sheet = ExtResource( 6 )
frames = 12

[node name="EggShadowTopRight" parent="GameIcon/Shadow" instance=ExtResource( 21 )]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 1, -1 )
sprite_sheet = ExtResource( 6 )
frames = 12

[node name="EggShadowBottomLeft" parent="GameIcon/Shadow" instance=ExtResource( 21 )]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -1, 1 )
sprite_sheet = ExtResource( 6 )
frames = 12

[node name="EggShadowBottomRight" parent="GameIcon/Shadow" instance=ExtResource( 21 )]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 1, 1 )
sprite_sheet = ExtResource( 6 )
frames = 12

[node name="GameButton" type="Button" parent="GameIcon"]
margin_left = -13.0
margin_top = 10.0
margin_right = 13.0
margin_bottom = 19.0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
toggle_mode = true
text = "Game"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameIconArea" type="Area2D" parent="GameIcon"]
position = Vector2( 0, 6 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameIcon/GameIconArea"]
position = Vector2( 0, -4 )
shape = SubResource( 9 )

[node name="WindowPositions" type="Node2D" parent="."]

[node name="TrashSpawn" type="Position2D" parent="WindowPositions"]
position = Vector2( 9, 24 )

[node name="NotesSpawn" type="Position2D" parent="WindowPositions"]
position = Vector2( 52, 58 )

[node name="GameSpawn" type="Position2D" parent="WindowPositions"]
position = Vector2( 96, 93 )

[node name="WavingFlag" type="Sprite" parent="."]
material = SubResource( 15 )
position = Vector2( 13, 200 )
texture = ExtResource( 8 )

[node name="ClockTimer" type="Timer" parent="."]

[node name="Windows" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="StartMenu" type="NinePatchRect" parent="."]
margin_left = 2.0
margin_top = 95.0
margin_right = 85.0
margin_bottom = 192.0
texture = ExtResource( 11 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dither" type="TextureRect" parent="StartMenu"]
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = 9.0
margin_bottom = -2.0
texture = ExtResource( 14 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuOptions" type="VBoxContainer" parent="StartMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOption" parent="StartMenu/MenuOptions" instance=ExtResource( 15 )]

[node name="NotesOption" parent="StartMenu/MenuOptions" instance=ExtResource( 15 )]
margin_top = 22.0
margin_bottom = 40.0
text = "Notes"
icon = ExtResource( 17 )

[node name="TrashOption" parent="StartMenu/MenuOptions" instance=ExtResource( 15 )]
margin_top = 44.0
margin_bottom = 62.0
text = "Trash"
icon = ExtResource( 19 )

[node name="Divider" type="TextureRect" parent="StartMenu/MenuOptions"]
margin_top = 66.0
margin_right = 75.0
margin_bottom = 67.0
rect_min_size = Vector2( 0, 1 )
texture = ExtResource( 18 )
stretch_mode = 2

[node name="QuitOption" parent="StartMenu/MenuOptions" instance=ExtResource( 15 )]
margin_top = 71.0
margin_bottom = 89.0
text = "Quit"
icon = ExtResource( 16 )

[node name="MouseBlocker" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="GlassesMouse" parent="." instance=ExtResource( 5 )]
position = Vector2( 140, 105 )
[connection signal="body_entered" from="DesktopArea" to="." method="_on_DesktopArea_body_entered"]
[connection signal="body_exited" from="DesktopArea" to="." method="_on_DesktopArea_body_exited"]
[connection signal="pressed" from="Taskbar/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="body_entered" from="Taskbar/StartButton/StartButtonArea" to="." method="_on_StartButtonArea_body_entered"]
[connection signal="body_exited" from="Taskbar/StartButton/StartButtonArea" to="." method="_on_StartButtonArea_body_exited"]
[connection signal="body_entered" from="TrashIcon/TrashIconArea" to="." method="_on_TrashIconArea_body_entered"]
[connection signal="body_exited" from="TrashIcon/TrashIconArea" to="." method="_on_TrashIconArea_body_exited"]
[connection signal="body_entered" from="NotesIcon/NotesIconArea" to="." method="_on_NotesIconArea_body_entered"]
[connection signal="body_exited" from="NotesIcon/NotesIconArea" to="." method="_on_NotesIconArea_body_exited"]
[connection signal="body_entered" from="GameIcon/GameIconArea" to="." method="_on_GameIconArea_body_entered"]
[connection signal="body_exited" from="GameIcon/GameIconArea" to="." method="_on_GameIconArea_body_exited"]
[connection signal="timeout" from="ClockTimer" to="." method="_on_ClockTimer_timeout"]
